@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle" >
-            <solid android:color="#131313"/>
-        </shape>
-    </item>
-    <item>
-         <bitmap android:src="@drawable/icon" android:gravity="center" />
-    </item>
+<item android:drawable="@color/background"/>
+<item><bitmap android:src="@drawable/icon" android:gravity="center"/></item>
 </layer-list>
