@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash</item>
-    </style>
+<style name="AppTheme" parent="@android:style/Theme.DeviceDefault.NoActionBar">
+<item name="android:colorPrimaryDark">@android:color/black</item>
+<item name="android:windowBackground">@color/background</item>
+</style>
 </resources>
