@@ -5,6 +5,7 @@ Version 16.2.x (v16-fixes)
   backward button was hit quickly multiple times.
 * Current file name was not cleared and button New Game not enabled
   after opening a file from clipboard.
+* Avoid jumping of splashscreen icon on Android.
 * Shared MIME Info was missing a pattern for detecting Classic 3-player
   game files independent of the file extension.
 * Development tool twogtp did not resolve ties as a win for the second
